# objc-utils

./: .gitignore  .travis.yml  CMakeLists.txt  DLFolding.h  FPTuple.m  LICENSE  NSArray+FPAdditions.h  NSArray+FPAdditions.m  NSObject+KVCExtensions.m  NSURL+ParameterParsing.h  ObjCFPHelpers.m  ObjcHelpers.h  README.mdown  Util.h  Util.m  objc-utils.podspec
CoreFoundation/Date+Time/: NSDate+Additions.h  NSDate+Additions.m  TimeHelpers.m
CoreFoundation/NSArray/: FPTuple.h  FPTuple.m  NSArray+FPAdditions.h  NSArray+FPAdditions.m
CoreFoundation/NSData/: NSData+Base64.h  NSData+Base64.m  NSData+CocoaDevUsersAdditions.m
CoreFoundation/NSObject/: NSObject+KVCExtensions.h  NSObject+KVCExtensions.m  NSObject+ObserveActions.h  NSObject+ObserveActions.m  NSObject+PerformBlock.h  NSObject+PerformBlock.m
CoreFoundation/NSString/: NSString+Hash.h  NSString+Hash.m  NSString+StringAdditions.m
CoreFoundation/Other/: NSURL+ParameterParsing.h  NSURL+ParameterParsing.m
CoreFoundationAdditions/: FPTuple.h  NSArray+FPAdditions.h  NSArray+FPAdditions.m  NSData+Base64.h  NSData+Base64.m  NSData+CocoaDevUsersAdditions.h  NSData+CocoaDevUsersAdditions.m  NSDate+Additions.h  NSDate+Additions.m  NSObject+KVCExtensions.m  NSObject+ObserveActions.m  NSObject+SimpleBindings.h  NSObject+SimpleBindings.m  NSString+PercentEscape.h  NSString+PercentEscape.m  NSString+StringAdditions.h  NSURL+ParameterParsing.m  ObjCFPHelpers.h  TimeHelpers.h  TimeHelpers.m
CoreGraphicsUtils/: PathUtils.c  PathUtils.h
UIKit/: UIColor+HelperAdditions.h  UIView+Additions.h
UIKit/Controls/: PopoverManager.h  PopoverManager.m  UIPlaceholderTextView.h  UIPlaceholderTextView.m  UITabBarController+HideableTabBar.h  UITabBarController+HideableTabBar.m
UIKit/Drawing/: InnerShadowDrawing.m  UIColor+HelperAdditions.h  UIColor+HelperAdditions.m  UIImage+Additions.h  UIImage+Additions.m  UIKit+DrawingHelpers.h  UIKit+DrawingHelpers.m
UIKit/TintedViews/: README.md  UIRoundedTintedButton.h  UIRoundedTintedButton.m  UITintedButton.h  (+5 more)
UIKitAdditions/: InnerShadowDrawing.h  InnerShadowDrawing.m  UIColor+HelperAdditions.h  UIColor+HelperAdditions.m  UIControl+DLBlockAdditions.h  UIControl+DLBlockAdditions.m  UIImage+Additions.h  UIImage+Additions.m  UIImage+Alpha.h  UIImage+Resize.h  UIImage+Resize.m  UIImage+RoundedCorner.h  UIImage+RoundedCorner.m  UIKit+DrawingHelpers.h  UIKit+DrawingHelpers.m  UITabBarController+HideableTabBar.h  UITabBarController+HideableTabBar.m  UIView+Sliding.h  UIView+Sliding.m
UIKitUtils/: PopoverManager.h  PopoverManager.m  UIPlaceHolderTextView.h  UIPlaceHolderTextView.m
Util/: TimeHelpers.h  TimeHelpers.m  Util.m
(+10 files in other folders)
